--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <h1>This is a header</h1>
         <p>Paragraph 1</p>
         <p>Paragraph 2</p>
+        <p>Hi :)</p>
     </body>
-</html>>
+</html>
